01-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
spec:
  containers:
    - name: nginx
      image: nginx:1.14.2
      ports:
        - containerPort: 80
#
#---
#apiVersion: v1
#kind: Pod
#metadata:
#  name: nginx-01-2
#spec:
#  containers:
#    - name: nginx
#      image: nginx:1.14.2
#    - name: debug
#      image: rkalluru/learnk8s:rhel9-bare
#---
#apiVersion: v1
#kind: Pod
#metadata:
#  name: pod-01-03
#spec:
#  containers:
#    - name: redhat
#      image: docker.io/redhat/ubi9
