02-labels.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-01
  labels:
    podName: nginx-01
    project: example
    appName: example02
spec:
  containers:
    - name: nginx
      image: nginx:1.14.2
      ports:
        - containerPort: 80
---
apiVersion: v1
kind: Pod
metadata:
  name: nginx-02
  labels:
    podName: nginx-02
    project: example
    appName: example02
spec:
  containers:
    - name: nginx
      image: nginx:1.14.2
      ports:
        - containerPort: 80
---
apiVersion: v1
kind: Pod
metadata:
  name: nginx-03
  labels:
    podName: nginx-03
    project: example
    appName: example02
spec:
  containers:
    - name: nginx
      image: nginx:1.14.2
      ports:
        - containerPort: 80
---
apiVersion: v1
kind: Pod
metadata:
  name: nginx-04
  labels:
    podName: nginx-04
    project: example
    appName: example02
spec:
  containers:
    - name: nginx
      image: nginx:1.14.2
      ports:
        - containerPort: 80
