06-pod-storage.yml
apiVersion: v1
kind: Pod
metadata:
  name: pod-demo-storage
spec:
  volumes:
   - name: html
     emptyDir: {}
  containers:
    - name: nginx
      image: nginx
      volumeMounts:
        - name: html
          mountPath: /usr/share/nginx/html
