07-ephmeral.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-01
spec:
  containers:
    - name: nginx
      image: nginx:1.14.2
      ports:
        - containerPort: 80

---
# kubectl debug nginx-01 -it --image=redhat/ubi9
# kubectl debug nginx-01 -it --image=rkalluru/debug
