14-configmap.yml
apiVersion: v1
kind: Pod
metadata:
  name: env-var-demo-cm
  labels:
    purpose: demonstrate-envars
spec:
  containers:
    - name: demo
      image: docker.io/rkalluru/learnk8s:rhel9-bare
---
apiVersion: v1
kind: Pod
metadata:
  name: env-from-demo-cm
  labels:
    purpose: demonstrate-envars
spec:
  containers:
    - name: demo
      image: docker.io/rkalluru/learnk8s:rhel9-bare
---
