16-node-scaling.yml
---
apiVersion: v1
kind: Pod
metadata:
  name: nginx
spec:
  containers:
    - name: app
      image: nginx
      resources:
        requests:
          memory: "5000Mi"
          cpu: "100m"
        limits:
          memory: "6100Mi"
          cpu: "200m"
---
apiVersion: v1
kind: Pod
metadata:
  name: nginx-1
spec:
  containers:
    - name: app
      image: nginx
      resources:
        requests:
          memory: "5000Mi"
          cpu: "100m"
        limits:
          memory: "6100Mi"
          cpu: "200m"
