19-node-selector.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-01
spec:
  containers:
    - name: nginx
      image: nginx:1.14.2
  nodeSelector:
    grouptype: default
