22-priorityclass.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-no-priority-class
  labels:
    priorityClass: none
spec:
  replicas: 15
  selector:
    matchLabels:
      priorityClass: none
  template:
    metadata:
      labels:
        priorityClass: none
    spec:
      containers:
      - name: nginx
        image: nginx:1.15
        resources:
          requests:
            cpu: 300m
            memory: 456Mi
        ports:
        - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-with-preemption
  labels:
    priorityClass: high-priority-no-preemption
spec:
  replicas: 5
  selector:
    matchLabels:
      priorityClass: high-priority-no-preemption
  template:
    metadata:
      labels:
        priorityClass: high-priority-no-preemption
    spec:
      priorityClassName: high-priority-no-preemption
      containers:
      - name: nginx
        image: nginx:1.15
        resources:
          requests:
            cpu: 300m
            memory: 456Mi
        ports:
        - containerPort: 80
