24-pod-affinity.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-s1
  labels:
    security: S1
spec:
  nodeSelector:
    choice: one
  containers:
    - name: nginx
      image: nginx
---
apiVersion: v1
kind: Pod
metadata:
  name: nginx-s2
  labels:
    security: S2
spec:
  nodeSelector:
    choice: two
  containers:
    - name: nginx
      image: nginx
---

apiVersion: v1
kind: Pod
metadata:
  name: with-pod-affinity
spec:
  containers:
    - name: nginx
      image: nginx
  affinity:
    podAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
        - labelSelector:
            matchExpressions:
              - key: security
                operator: In
                values:
                  - S1
          topologyKey: choice
    podAntiAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
        - labelSelector:
            matchExpressions:
              - key: security
                operator: In
                values:
                  - S2
          topologyKey: choice
      preferredDuringSchedulingIgnoredDuringExecution:
        - weight: 100
          podAffinityTerm:
            labelSelector:
              matchExpressions:
                - key: security
                  operator: In
                  values:
                    - S2
            topologyKey: choice
